--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dice-roller",
+  "name": "dice-roller-tw",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.8",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "framer-motion": "^7.1.0",
-    "next": "12.2.3",
+    "daisyui": "^2.25.0",
+    "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-is": "^18.2.0",
-    "zod": "^3.17.3",
-    "zustand": "^4.0.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
   "ct3aMetadata": {
-    "initVersion": "5.6.0"
+    "initVersion": "5.9.0"
   }
 }
