Theme Switcher & styles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dice-roller",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,6 +13,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "theme-change": "^2.2.0",
     "zod": "^3.18.0",
     "zustand": "^4.1.1"
   },
@@ -26,6 +27,8 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
