--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "theme-change": "^2.2.0",
     "zod": "^3.18.0",
     "zustand": "^4.1.1"
