--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-modern-drawer": "^1.1.2",
     "theme-change": "^2.2.0",
     "zod": "^3.18.0",
     "zustand": "^4.1.1"
